Display templates: Fixed template conflicts with desktop themes
Our CSS files set the foreground color, but not always the background color,
hence causing text to be unreadable when used with desktop themes which have
light foreground colors and dark background colors.

--- a/src/display-templates/Blue.css
+++ b/src/display-templates/Blue.css
@@ -1,6 +1,10 @@
 /**
  * Theme by BibleTime - www.bibletime.info *
  */
+
+/* Fix color common color conflicts with desktop themes: */
+* { background-color: #fff; color: #000; }
+
 #content {
     margin:10px;
 }
