--- a/src/display-templates/Crazy.css
+++ b/src/display-templates/Crazy.css
@@ -1,6 +1,10 @@
 /**
  * Theme by BibleTime - www.bibletime.info *
  */
+
+/* Fix color common color conflicts with desktop themes: */
+* { background-color: #fff; color: #000; }
+
 body {
     margin:0px;
     padding:0;
