--- a/src/display-templates/HighContrast.css
+++ b/src/display-templates/HighContrast.css
@@ -2,6 +2,9 @@
  * Theme by BibleTime - www.bibletime.info
  */
 
+/* Fix color common color conflicts with desktop themes: */
+* { background-color: #fff; color: #000; }
+
 #content {
     margin: 10px;
 }
